# cmd-terminal

./: README.md  arch.drawio  前端.xmind  后端.xmind  命令集.xmind
backend/: .gitignore  README.md
backend/db/: ddl.sql
cpp-backend/: .gitignore  CMakeLists.txt  CMakeLists_单编.txt  build.sh  config-prod.json  config.json  项目.md
cpp-backend/cmake/: SpecialDeal.cmake  drogon.sh  stibel.cmake
cpp-backend/common/: BaseResponse.h  ErrorCode.h  HttpResponseUtils.h  Response2json.h  ResultUtils.h
cpp-backend/conf/: config-prod.json  config.json
cpp-backend/constants/: InterfaceConstant.h  UserConstant.h
cpp-backend/controllers/: InterfaceController.cc  InterfaceController.h  LogController.cc  LogController.h  TestChannelController.cc  TestChannelController.h  UserController.cc  UserController.h
cpp-backend/docker/: Dockerfile  README.md  build.sh  common.sh  run.sh  swd.sh
cpp-backend/filters/: LoginFilter.cc  LoginFilter.h
cpp-backend/models/: Interface.cc  Log.cc  Log.h  User.cc  User.h  model.json
cpp-backend/services/: InterfaceService.h  InterfaceServiceImpl.cc  InterfaceServiceImpl.h  LogService.h  LogServiceImpl.cc  LogServiceImpl.h  UserService.h  UserServiceImpl.cc  UserServiceImpl.h
cpp-backend/services/inner/: CacheServiceImpl.cc  TestChannelServiceImpl.cc
cpp-backend/sql/: mysql.sql
cpp-backend/src/: main.cc
cpp-backend/src/common/include/common/: BaseResponse.h
cpp-backend/src/constants/include/constants/: InterfaceConstant.h  UserConstant.h
cpp-backend/src/controllers/include/controllers/: InterfaceController.h  LogController.h  TestChannelController.h  UserController.h
cpp-backend/src/controllers/src/: InterfaceController.cc  LogController.cc  TestChannelController.cc  UserController.cc
cpp-backend/src/exception/include/exception/: BusinessException.h
cpp-backend/src/filters/include/filters/: LoginFilter.h
cpp-backend/src/filters/src/: LoginFilter.cc
cpp-backend/src/main/: main.cc
cpp-backend/src/models/: model.json
cpp-backend/src/models/include/models/: Interface.h  User.h
cpp-backend/src/models/src/: Interface.cc  Log.cc  User.cc
cpp-backend/src/services/include/services/: InterfaceService.h  UserService.h
cpp-backend/src/services/include/services/impl/: InterfaceServiceImpl.h
cpp-backend/src/services/include/services/inner/: CacheService.h  TestChannelService.h
cpp-backend/src/services/include/services/inner/impl/: CacheServiceImpl.h  TestChannelServiceImpl.h
cpp-backend/src/services/src/: InterfaceServiceImpl.cc  LogServiceImpl.cc  UserServiceImpl.cc
cpp-backend/src/services/src/inner/: CacheServiceImpl.cc  TestChannelServiceImpl.cc
cpp-backend/test/: CMakeLists.txt
cpp-backend/testcase/: CMakeLists.txt
cpp-backend/testcase/common/include/: CommonContants.h  HttpTest.h
cpp-backend/testcase/common/source/: HttpTest.cpp
cpp-backend/testcase/googletest/: CMakeLists.txt
cpp-backend/testcase/googletest/source/: main.cpp
cpp-backend/testcase/googletest/test/: CMakeLists.txt  test_project1.cpp
cpp-backend/testcase/interface/: CMakeLists.txt
cpp-backend/testcase/interface/include/: InterfaceControllerTest.h  backendVersion.h  background.h  translate.h  weather.h
cpp-backend/testcase/interface/json/backend/version/resp/: Given_null_When_query_backend_version_Then_return_success_resp.json
cpp-backend/testcase/interface/json/background/req/: Given_dongman_When_get_background_Then_return_success.json
cpp-backend/testcase/interface/json/background/resp/: Given_dongman_When_get_background_Then_return_success_resp.json
cpp-backend/testcase/interface/json/translate/req/: Given_hello_When_translate_Then_return_success.json
cpp-backend/testcase/interface/json/weather/req/: Given_city_When_query_future_weather_Then_return_success.json  Given_city_When_query_now_weather_Then_return_success.json
cpp-backend/testcase/interface/json/weather/resp/: Given_city_When_query_future_weather_Then_return_success_resp.json  Given_city_When_query_now_weather_Then_return_success_resp.json
cpp-backend/testcase/interface/source/: backendVersion.cpp  background.cpp  translate.cpp  weather.cpp
cpp-backend/testcase/user/: CMakeLists.txt
cpp-backend/testcase/user/include/: UserControllerTest.h  userCurrent.h  userLogin.h  userLogout.h  userRegister.h
cpp-backend/testcase/user/json/current/resp/: Given_no_login_user_When_query_Then_return_fail_resp.json
cpp-backend/testcase/user/json/login/req/: Given_correct_array_user_When_login_Then_return_success.json  Given_correct_user_When_login_Then_return_success.json
cpp-backend/testcase/user/json/login/resp/: Given_correct_user_When_login_Then_return_success_resp.json  Given_no_exist_user_When_login_Then_return_fail_resp.json
cpp-backend/testcase/user/json/logout/resp/: Given_null_When_logout_Then_return_success_resp.json
cpp-backend/testcase/user/json/register/req/: Given_userAccount_Length_Less_than_4_When_register_Then_return_fail.json  Given_userAccount_Null_When_register_Then_return_fail.json  Given_userAccount_contain_special_charater_When_register_Then_return_fail.json  Given_userAccount_unique_When_register_Then_return_fail.json  Given_userPassword_Length_Less_than_8_When_register_Then_return_fail.json  Given_userPassword_checkPassword_not_same_When_register_Then_return_fail.json
cpp-backend/testcase/user/json/register/resp/: Given_userAccount_Length_Less_than_4_When_register_Then_return_fail_resp.json  Given_userAccount_Null_When_register_Then_return_fail_resp.json  Given_userAccount_contain_special_charater_When_register_Then_return_fail_resp.json  Given_userAccount_unique_When_register_Then_return_fail_resp.json  Given_userPassword_Length_Less_than_8_When_register_Then_return_fail_resp.json  Given_userPassword_checkPassword_not_same_When_register_Then_return_fail_resp.json
cpp-backend/testcase/user/source/: userCurrent.cpp  userLogin.cpp  userLogout.cpp  userRegister.cpp
doc/: backend.md  commands.md  frontend.md  yuindex学习笔记.md  前端.xmind  后端.xmind  命令集.xmind  详细文档.md
frontend/: .gitignore  components.d.ts  index.html  package.json  vite.config.ts
(+125 files in other folders)
