#可执行文件输出目录
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/googletest)

#头文件目录
INCLUDE_DIRECTORIES( ./include  ${PROJECT_SOURCE_DIR}/testcase/common/include ${GOOGLETEST_INCLUDE} ${POCO_INCLUDE} ${JSONCPP_INCLUDE})

#目录源码路径
SET( INTERFACECONTROLLER_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB INTERFACECONTROLLER_TEST_FILES ${INTERFACECONTROLLER_TEST_SRC_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/testcase/common/source/*.cpp)

#依赖的LIB
SET(INTERFACECONTROLLER_TEST_LIB  ${LIB_GOOGLETEST} ${LIB_POCO} ${LIB_JSONCPP})

#生成 
ADD_EXECUTABLE( interfacecontroller_test ${INTERFACECONTROLLER_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( interfacecontroller_test ${INTERFACECONTROLLER_TEST_LIB} -lpthread )